feat: Integrate PeerJS for real-time sync
Introduce PeerJS to enable direct, real-time device-to-device synchronization of cash book data. This enhances the application's cloud-simulated sync functionality by allowing mobile and laptop roles to communicate directly.

Includes UI adjustments for a more modern and responsive feel, and updates the application title and background theme.

--- a/index.html
+++ b/index.html
@@ -4,31 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>SHIVAS BEACH CABANAS - Master Cash Book</title>
+    <title>SHIVAS BEACH - Master Live Cash Book</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- Real-time Device-to-Device Communication Library -->
+    <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
     <style>
         body {
             font-family: 'Plus Jakarta Sans', sans-serif;
-            background-color: #0f172a;
+            background-color: #020617;
             color: #f8fafc;
             -webkit-tap-highlight-color: transparent;
         }
         .glass-card {
-            background: rgba(255, 255, 255, 0.03);
-            backdrop-filter: blur(12px);
-            border: 1px solid rgba(255, 255, 255, 0.08);
+            background: rgba(30, 41, 59, 0.5);
+            backdrop-filter: blur(16px);
+            border: 1px solid rgba(255, 255, 255, 0.05);
+        }
+        .master-glow {
+            box-shadow: 0 0 40px -10px rgba(14, 165, 233, 0.2);
         }
         input::-webkit-outer-spin-button,
         input::-webkit-inner-spin-button {
             -webkit-appearance: none;
             margin: 0;
         }
-        .delete-btn-hover:hover {
-            background: rgba(239, 68, 68, 0.1);
-            color: #ef4444;
-            transform: scale(1.1);
+        .status-dot {
+            width: 8px;
+            height: 8px;
+            border-radius: 50%;
+            display: inline-block;
         }
+        .status-online { background-color: #10b981; box-shadow: 0 0 8px #10b981; }
+        .status-offline { background-color: #ef4444; }
+        .status-syncing { background-color: #f59e0b; animation: pulse 1s infinite; }
+        @keyframes pulse { 0% { opacity: 1; } 50% { opacity: 0.4; } 100% { opacity: 1; } }
     </style>
     <script type="importmap">
 {
@@ -43,7 +53,7 @@
 }
 </script>
 </head>
-<body class="antialiased overflow-x-hidden">
+<body class="antialiased overflow-x-hidden selection:bg-sky-500/30">
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
 </body>
