--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             -webkit-tap-highlight-color: transparent;
         }
         .glass-card {
-            background: rgba(30, 41, 59, 0.5);
-            backdrop-filter: blur(16px);
+            background: rgba(30, 41, 59, 0.4);
+            backdrop-filter: blur(12px);
             border: 1px solid rgba(255, 255, 255, 0.05);
         }
         .master-glow {
-            box-shadow: 0 0 40px -10px rgba(14, 165, 233, 0.2);
+            box-shadow: 0 0 40px -10px rgba(14, 165, 233, 0.15);
         }
         input::-webkit-outer-spin-button,
         input::-webkit-inner-spin-button {
@@ -39,6 +39,25 @@
         .status-offline { background-color: #ef4444; }
         .status-syncing { background-color: #f59e0b; animation: pulse 1s infinite; }
         @keyframes pulse { 0% { opacity: 1; } 50% { opacity: 0.4; } 100% { opacity: 1; } }
+
+        /* Compact Scrollbars */
+        ::-webkit-scrollbar { width: 4px; height: 4px; }
+        ::-webkit-scrollbar-track { background: transparent; }
+        ::-webkit-scrollbar-thumb { background: rgba(255, 255, 255, 0.1); border-radius: 10px; }
+        ::-webkit-scrollbar-thumb:hover { background: rgba(255, 255, 255, 0.2); }
+
+        /* Sticky Table Optimization */
+        .table-container {
+            max-height: 45vh;
+            overflow-y: auto;
+            position: relative;
+        }
+        thead th {
+            position: sticky;
+            top: 0;
+            background: #0f172a;
+            z-index: 10;
+        }
     </style>
     <script type="importmap">
 {
@@ -47,8 +66,8 @@
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "@google/genai": "https://esm.sh/@google/genai@1.3.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
 </script>
